@@ -1,3 +1,4 @@
+	* fall back to copy+remove if rename_file fails
 	* improve handling of filesystems not supporting fallocate()
 	* force-proxy no longer disables DHT
 	* improve connect-boost feature, to make new torrents quickly connect peers
